2006-08-09  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/backend/update.py: added NotBranchError support to pull()
    * olive/backend/__init__.py: added Branch/Pull signal
    * olive/backend/handler.py: implemented Branch/Pull signal handler
    * olive/frontend/gtk/status.py: fixed a NotBranchError related bug
    * olive.glade: diff and status window not visible by default

2006-08-08  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
    * olive.glade: some icons redrawn + added 16x16 icons
    * icons/*: some icons redrawn + added 16x16 icons
    * setup.py: modified respectively
    * olive/frontend/gtk/menu.py: Added left context menu + Bookmark option
    * olive/frontend/gtk/__init__.py: load bookmarks into the left panel
    * olive/frontend/gtk/handler.py: implemented signal handlers for left panel
    * olive.glade: added signals for the bookmark TreeView
    * cmenu.ui: added description for bookmark context menu
    * olive/frontend/gtk/__init__.py: implemented OlivePreferences - this class
      is responsible for loading/saving user preferences
    * olive/frontend/gtk/handler.py: save preferences before quit
    * olive.glade: some wordings fixed (thanks to David Allouche)

2006-08-07  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive.galde: added custom artwork (icons)
    * icons/*: new icons for the toolbar
    * setup.py: install the icons

2006-08-05  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/diff.py: Diff window now destroyed if not a branch
    * olive.glade: added shadow to Diff window's scrollbars

2006-08-03  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>

    * olive/frontend/gtk/status.py: Status window implemented
    * olive.glade: Status window designed and Branch/status menu added
    * olive.glade: added Statistics menu
    * olive/frontend/gtk/__init__.py: added Statistics menu handlers
    * olive/frontend/gtk/handler.py: implemented Diff menu handler