@@ -63,7 +63,7 @@ class OliveGtk:
                 "on_about_activate": handler.on_about_activate,
                 "on_menuitem_add_files_activate": handler.on_menuitem_add_files_activate,
                 "on_menuitem_remove_file_activate": handler.on_menuitem_remove_file_activate,
-                "on_menuitem_file_make_directory_activate": handler.not_implemented,
+                "on_menuitem_file_make_directory_activate": handler.on_menuitem_file_make_directory_activate,
                 "on_menuitem_branch_initialize_activate": handler.on_menuitem_branch_initialize_activate,
                 "on_menuitem_branch_get_activate": handler.on_menuitem_branch_get_activate,
                 "on_menuitem_branch_checkout_activate": handler.on_menuitem_branch_checkout_activate,
