@@ -1,5 +1,8 @@
 2006-08-09  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
 
+    * olive/backend/fileops.py: added NotBranchError support to mkdir()
+    * olive/frontend/gtk/mkdir.py: implemented OliveMkdir
+    * olive/frontend/gtk/handler.py: added Make directory signal handler
     * olive/backend/update.py: added NotBranchError support to pull()
     * olive/backend/__init__.py: added Branch/Pull signal
     * olive/backend/handler.py: implemented Branch/Pull signal handler
